# dems

./: .env.example  .gitignore  AUDITORIA-2026-06-17.md  GUIA_DESPLIEGUE.md  README.md  docker-compose.yml  justfile
.github/workflows/: build-binaries.yml  ci.yml  deploy.yml  release.yml
apps/api/: .dockerignore  Cargo.toml  Dockerfile
apps/api/crates/api/: Cargo.toml
apps/api/crates/api/src/: auth.rs  config.rs  error.rs  extractors.rs  lib.rs  main.rs  openapi.rs  password.rs  routes.rs  state.rs
apps/api/crates/api/src/routes/: admin_assignments.rs  admin_categorias.rs  admin_editions.rs  admin_prototipos.rs  admin_results.rs  admin_rubrics.rs  admin_users.rs  auth_routes.rs  evaluacion_routes.rs  jurado_routes.rs
apps/api/crates/api/tests/: admin_assignments.rs  admin_categorias.rs  admin_editions.rs  admin_evaluacion_reopen.rs  admin_prototipos.rs  admin_results_categoria.rs  admin_results_export.rs  admin_results_final.rs  admin_users.rs  asignaciones.rs  auth.rs  cors.rs  edition_phase.rs  evaluacion_create.rs  evaluacion_get.rs  evaluacion_idempotent.rs  evaluacion_patch.rs  evaluacion_phase_gate.rs  evaluacion_scores.rs  evaluacion_submit.rs  me.rs  multi_jurado.rs  openapi.rs  refresh.rs  require_admin.rs  rubric_create.rs  rubric_create_nested.rs  rubric_delete.rs  rubric_get.rs  rubric_list.rs  rubric_patch.rs  rubric_peso.rs  rubric_structure_put.rs  seed_dev_idempotent.rs
apps/api/crates/api/tests/common/: mod.rs
apps/api/crates/core/: Cargo.toml
apps/api/crates/core/src/: error.rs  lib.rs  models.rs
apps/api/crates/seed/: Cargo.toml
apps/api/crates/seed/src/: data.rs  dev.rs  lib.rs  loader.rs  main.rs  rubrics.rs
apps/api/migrations/: 20260416000001_init.sql  20260605000001_edition_phase.sql  20260617000001_user_token_version.sql  20260617000002_evaluacion_score_check.sql  20260617000003_rubric_template_peso.sql
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/ios/Runner/Base.lproj/: LaunchScreen.storyboard
apps/mobile/lib/: app.dart  main.dart
apps/mobile/lib/core/: env.dart  router.dart  server_config.dart
apps/mobile/lib/data/api/: api_client.dart
apps/mobile/lib/data/db/: app_database_provider.dart  database.dart  evaluaciones_dao.dart  rubrics_dao.dart
apps/mobile/lib/data/db/connection/: connection.dart  native.dart  unsupported.dart  web.dart
apps/mobile/lib/data/sync/: sync_worker.dart
apps/mobile/lib/features/admin/: admin_shell.dart
apps/mobile/lib/features/admin/assignments/application/: admin_assignments_controller.dart
apps/mobile/lib/features/admin/assignments/data/: admin_assignments_repository.dart  assignment_models.dart
apps/mobile/lib/features/admin/assignments/presentation/: admin_assignments_page.dart
apps/mobile/lib/features/admin/editions/data/: edition_models.dart  (+1 more)
apps/mobile/lib/features/admin/sections/: admin_assignments_page.dart  admin_editions_page.dart  admin_prototipos_page.dart  admin_results_page.dart  admin_rubrics_page.dart  admin_users_page.dart
apps/mobile/lib/features/admin/shared/: section_placeholder.dart
apps/mobile/lib/features/asignaciones/application/: asignaciones_controller.dart
apps/mobile/lib/features/asignaciones/data/: asignacion_models.dart  asignaciones_repository.dart
apps/mobile/lib/features/asignaciones/presentation/: asignacion_card.dart
apps/mobile/lib/features/auth/: login_page.dart  splash_page.dart
apps/mobile/lib/features/auth/application/: auth_controller.dart
apps/mobile/lib/features/auth/data/: auth_models.dart  auth_repository.dart  auth_storage.dart
apps/mobile/lib/features/evaluaciones/application/: evaluacion_controller.dart
apps/mobile/lib/features/evaluaciones/data/: evaluacion_models.dart  evaluaciones_repository.dart
apps/mobile/lib/features/evaluaciones/presentation/: evaluacion_page.dart
apps/mobile/lib/features/evaluations/: evaluation_page.dart
apps/mobile/lib/features/home/: home_page.dart
apps/mobile/lib/features/settings/: server_config_sheet.dart
apps/mobile/lib/shared/theme/: app_colors.dart  app_motion.dart  app_theme.dart
apps/mobile/lib/shared/widgets/: bezel_card.dart  eyebrow_tag.dart  mesh_backdrop.dart  primary_cta.dart  stagger_reveal.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/linux/runner/: my_application.cc
apps/mobile/test/: api_client_refresh_test.dart  asignaciones_orden_test.dart  evaluacion_reconcile_on_open_test.dart  rubric_editor_test.dart  rubric_peso_test.dart  server_endpoint_test.dart  sync_worker_reconcile_test.dart  widget_test.dart
apps/mobile/web/: index.html  manifest.json
deploy/: .env.prod.example  README.md  docker-compose.prod.yml
deploy/nginx/: dems.eddndev.work.conf
deploy/windows/: .env.example  LEEME-Windows.md  instalar-postgres.bat  run-server.bat  seed-db.bat  setup-db.bat
scripts/: gen_seed_data.py  import_prototipos.py
(+31 files in other folders)
