[package]
name = "dems-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dems_api"
path = "src/lib.rs"

[[bin]]
name = "dems-api"
path = "src/main.rs"

[[bin]]
name = "openapi-export"
path = "src/bin/openapi_export.rs"

[dev-dependencies]
axum-test = "17"
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }

[dependencies]
dems-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
async-trait = { workspace = true }
