[package]
name = "dems-seed"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "seed"
path = "src/main.rs"

[[bin]]
name = "seed-dev"
path = "src/bin/seed_dev.rs"

[dependencies]
dems-core = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
argon2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
